# elecrowp4_weather

./: .gitignore  CLAUDE.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  acurite.cc  acurite.h  bme680.cc  bme680.h  cc1101.cc  cc1101.h  display.cc  display.h  idf_component.yml  log_util.h  lv_font_sourcesanspro_bold300.c  lv_font_sourcesanspro_bold36.c  lv_font_sourcesanspro_bold72.c  lv_font_sourcesanspro_regular16.c  lv_font_sourcesanspro_regular24.c  lv_font_sourcesansprobold80.c  main.cc  ntp_sync.cc  ntp_sync.h  signal_capture.cc  signal_capture.h  weather_display.cc  weather_display.h  weather_state.h
