idf_component_register(
    SRCS
        main.cc
        bme680.cc
        display.cc
        cc1101.cc
        signal_capture.cc
        acurite.cc
        weather_display.cc
        ntp_sync.cc
        lv_font_sourcesanspro_bold300.c
        lv_font_sourcesanspro_bold72.c
        lv_font_sourcesanspro_bold36.c
        lv_font_sourcesanspro_regular24.c
        lv_font_sourcesanspro_regular16.c
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_timer
        esp_lcd
        esp_hw_support
        esp_driver_spi
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_i2c
        freertos
        lvgl
        esp_wifi
        esp_netif
        nvs_flash
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE LV_LVGL_H_INCLUDE_SIMPLE=1)
